# meilisearch-thai

./: .coverage  .dockerignore  .env.compound  .env.example  .env.existing  .env.prod  .gitignore  COMPOUND_DICTIONARY_DEPLOYMENT.md  DELIVERY_SUMMARY.md  FILE_STRUCTURE.md  MANUAL_RESEARCHER_TESTING.md  Makefile  ORGANIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_CONTAINER_SETUP.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_TEST_RESULTS.md  PRODUCTION_DOMAIN_SETUP.md  PRODUCTION_READINESS_REPORT.md  QUICK_OPERATIONS.md  QUICK_START.md  README.md  check-meilisearch.sh  comprehensive_test_report.md  debug-dictionary.sh  deploy-production.sh  deploy.sh  docker-compose.override.yml  docker-compose.yml  fix-production-config.sh  integration_test_report.json  k8s-deployment.yaml  organize-root-folder.sh  production_test_results.json  pyproject.toml  rebuild-and-restart.sh  requirements.txt  restart-service.sh  setup-ssl.sh  setup_existing_meilisearch.sh  (+14 more)
.github/workflows/: README.md  ci.yml  deploy.yml  docker.yml  maintenance.yml  release-1.0.0-simple.yml  release-1.0.0.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
admin-frontend/: .env.example  README.md  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
backups/: .gitkeep  README.md
config/: compound_words.json  index.md
config/development/: .env.template  search-proxy.yaml  tokenizer.json
config/examples/: README.md
config/production/: .env.prod.local  .env.template  search-proxy.yaml
config/shared/: logging.yaml
config/testing/: .env.template
data/: index.md
data/dictionaries/: thai_compounds.json
data/samples/: README.md  combined_dataset.json  test_queries.json  thai_documents.json
deployment/docker/: .env.example  .env.external-meilisearch.template  DEPLOY-NPM.md  Dockerfile  Dockerfile.prod  README.md  README.search-proxy.md  README_DOCKER_DEPLOYMENT.md  README_EXTERNAL_MEILISEARCH.md  deploy-external-meilisearch.sh  deploy-npm.sh  docker-backup-recovery.py  docker-compose.external-meilisearch.yml  docker-compose.npm-search-proxy.yml  docker-compose.npm.yml  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.search-proxy.yml  docker-compose.tokenizer-only.yml  docker-compose.yml  docker-deployment-manager.py  docker-health-monitor.py  docker-resource-limits.yml  monitor-npm.sh  nginx.external-meilisearch.conf  nginx.prod.conf  nginx.production.conf  prometheus-npm.yml  prometheus.yml  test-deployment-utilities.sh  test-external-meilisearch.sh  validate-external-meilisearch.sh
deployment/environments/: README.md
deployment/k8s/: README.md
deployment/nginx-proxy-manager/: PRODUCTION-CHECKLIST.md  PRODUCTION-SETUP.md  monitor-production.sh  setup-production.sh  thai-search-proxy.service
deployment/scripts/: README.md  README_EXISTING_MEILISEARCH.md  benchmark.py  compare_results.py  demo_thai_tokenizer.py  deploy_production.sh  optimize_performance.py  requirements.txt  run_demo.py  run_full_system_integration_tests.py  setup_demo.py  setup_existing_meilisearch.sh  setup_production_local.sh  start_api_with_compounds.py
deployment/standalone/: README.md  backup-service.py  configure-service.py  debug-utilities.py  install-dependencies.py  manage-service.py  restart-service.sh  setup-standalone.py  setup-venv.py  start-service.sh  status-service.sh  stop-service.sh  test-setup.py
deployment/systemd/: README.md  deploy-systemd.sh  install-systemd-service.py  logrotate.conf.template  manage-service.py  thai-tokenizer.service.template
deployment_output/: deployment_result.json
docker/: Dockerfile  nginx.conf
docs/: API-KEY-SETUP.md  AUTO-TOKENIZATION-PIPELINE.md  CLI_AND_AUTOMATION.md  COMPOUND_SEARCH_TESTING.md  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT_SYSTEM_OVERVIEW.md  DEVELOPER-GUIDE.md  EXISTING_INDEX_MANAGEMENT.md  HOT-RELOAD-CONFIG.md  INTEGRATION-EXAMPLES.md  OPERATIONAL_TROUBLESHOOTING.md  PRODUCTION_DEPLOYMENT_GUIDE.md  REINDEXING_GUIDE.md  SEARCH-PROXY-API.md  SEARCH-QUALITY-TUNING.md  TOKENIZATION-EXAMPLES.md  api.md  deployment.md  examples.md  index.md  troubleshooting.md
docs/api/: index.md
docs/architecture/: index.md  project-structure.md
docs/deployment/: COMPOUND_DICTIONARY_DEPLOYMENT.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  backup-recovery-guide.md  configuration-examples.md  disaster-recovery-guide.md  index.md  maintenance-procedures.md  monitoring-alerting-setup.md  on-premise-deployment-guide.md  performance-tuning-guide.md  production-setup-guide.md  security-configuration-guide.md  troubleshooting-guide.md
docs/development/: README.md  index.md  migration-guide.md  testing-summary.md
docs/examples/: compound-word-testing.md
docs/getting-started/: index.md  newcomer-guide.md
docs/integration/: existing-meilisearch-integration.md  index.md
docs/production/: PRODUCTION_DEPLOYMENT_TEST_RESULTS.md  PRODUCTION_FIX_COMMANDS.md  SECURITY_IMPLEMENTATION_SUMMARY.md
docs/project/: EXISTING_MEILISEARCH_INTEGRATION.md  (+1 more)
examples/: compound_tokenization.py  deployment_config_demo.py  deployment_config_example.json  result_ranker_demo.py  security_demo.py  security_integration_example.py
frontend-prototype/: README.md  package.json
monitoring/: index.md  prometheus.yml
reports/: index.md
sample_data/: README.md  formal_documents.json  informal_documents.json  test_queries.json  thai_documents.json
scripts/: README.md  benchmark.py  ci_deployment_testing.py  compare_results.py  create-release-1.0.0.sh  deploy_production.sh  generate-api-key.sh  integrate_compound_dictionary.py  mock_meilisearch.py  requirements.txt  run_deployment_tests.py  setup_compound_env.sh  setup_demo.py  setup_existing_meilisearch.sh  start_api_with_compounds.py  test-tokenization.sh  test_custom_dictionary.py  test_production_deployment.py  thai-tokenizer-deploy  update_tokenizer_service.py
src/: __init__.py
ssl/: .gitkeep  README.md
tests/: README.md
(+217 files in other folders)
